--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">Zulip App</string>
+    <string name="app_name">Zulip Application</string>
+    <string name="menu_channels_title">Channels</string>
+    <string name="menu_people_title">People</string>
+    <string name="menu_profile_title">Profile</string>
+    <string name="channels_expand_button_description">Show/Hide Topics</string>
+    <string name="channels_tab_subscribed">Subscribed</string>
+    <string name="channels_tab_all">All streams</string>
+    <string name="people_avatar_description">Avatar</string>
+    <string name="channels_search_hint">Search...</string>
+    <string name="channels_search_button_description">Search Button</string>
+    <string name="people_search_hint">Users...</string>
+    <string name="chat_edit_text_hint">Написать...</string>
+    <string name="chat_send_button_description">Send Button</string>
+    <string name="chat_back_button_description">Back Button</string>
+    <string name="profile_avatar_description">Avatar</string>
+    <string name="incoming_message_image_view_description">Avatar</string>
 </resources>
